# codec2_flutter

./: .gitignore  .gitmodules  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: codec2_flutter.c
ios/: codec2_flutter.podspec
ios/Classes/: Codec2FlutterPlugin.swift  codebookd.c  codebookjmv.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c  codec2_amalgam.c  codec2_fft_wrap.c  kiss_fftr_wrap.c
lib/: codec2_flutter.dart
macos/: codec2_flutter.podspec
macos/Classes/: Codec2FlutterPlugin.swift  codebook.c  codebookge.c  codebooknewamp1.c  codec2_amalgam.c  kiss_fft_wrap.c
src/codec2_generated/: codebook.c  codebookd.c  codebookge.c  codebookjmv.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c
src/codec2_generated/codec2/: version.h
